--- a/deep-learning.html
+++ b/deep-learning.html
@@ -82,7 +82,7 @@ and Computer Vision to join us in our commitment to improve the quality of care?
 Vision / Computational geometry. GIT version control (good knowledge). English
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691950514-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691950514-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -102,7 +102,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">Stuttgart, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1780403'>Job Application for Sr. Software Engineer, AI and Deep Learning at Sony Interactive Entertainment PlayStation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1780403'>Job Application for Sr. Software Engineer, AI and Deep Learning at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -141,7 +141,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p>6 days ago ... ... artificial intelligence and self-driving cars. Learn more about NVIDIA. Solutions 
 Architect - WWFO | US, CA, Santa Clara ? Solution Architect - WWFO | US, CA,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691132277-thesis-in-the-field-of-deep-learning-for-autonomous-driving'>Bosch Group Thesis in the field of Deep Learning for Autonomous Driving | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691132277-thesis-in-the-field-of-deep-learning-for-autonomous-driving'>Bosch Group Thesis in the field of Deep Learning for Autonomous Driving | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -170,7 +170,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -186,12 +186,12 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='https://eygbl.referrals.selectminds.com/jobs/senior-ai-scientist-deep-learning-86705'>Senior AI Scientist - Deep Learning - EY Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/senior-ai-scientist-deep-learning-86705'>Senior AI Scientist - Deep Learning - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Job Summary: Reporting to the AI Science Leader the responsibility of this 
 position is to create products or tools built on Artificial Intelligence...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999690512816-clinical-program-manager-deep-learning'>4Catalyzer Clinical Program Manager, Deep Learning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999690512816-clinical-program-manager-deep-learning'>4Catalyzer Clinical Program Manager, Deep Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
@@ -203,7 +203,7 @@ position is to create products or tools built on Artificial Intelligence...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aeratechnology/0ddb6955-95c5-4b06-a34c-43cf9b8fd3e3'>Aera Technology - Senior Data Scientist - Deep Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/aeratechnology/0ddb6955-95c5-4b06-a34c-43cf9b8fd3e3'>Aera Technology - Senior Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
@@ -408,7 +408,7 @@ Project?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/osPW7fw4'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Sr Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/osPW7fw4'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Sr Software Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -448,7 +448,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://www.datarobot.com/careers/job/1615743/'>Deep Learning Engineer, Core Modeling in Singapore | Open position | DataRobot</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1615743/'>Deep Learning Engineer, Core Modeling in Singapore | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
